recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameter increment.
   	avance(length);gauche(angle);spiral(steps-1, angle ,lenght + increment);
                                           ^